<resources>
    <string name="app_name">M-Banking</string>
    <!--    LOGIN-->
    <string name="login">MASUK</string>
    <string name="register_here">DAFTAR DISINI</string>
    <string name="register">DAFTAR</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="regist_hint">Belum Memiliki Akun ?</string>
    <string name="regist_hint2">Daftar Sekarang</string>
    <string name="user_name">Nama User</string>

    <!--    REGISTER-->
    <string name="no_ktp">No. KTP</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="address">Alamat</string>
    <string name="no_hp">No. Telp</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="pin">Pin</string>
    <string name="birthdate">Tanggal Lahir</string>
    <string name="norek">No. Rekening</string>
    <string name="jeniskelamin">Jenis Kelamin (L/P)</string>
    <!--    HOME-->
    <string name="hello">Hello,</string>
    <string name="tot_saldo">TOTAL SALDO</string>
    <string name="pay_bpjs">PEMBAYARAN BPJS</string>
    <string name="mutasi_rekening">MUTASI REKENING</string>
    <string name="logout">LOGOUT</string>
    <!--    BPJS-->
    <string name="no_bpjs">No. BPJS</string>
    <string name="rp">Rp.</string>
    <string name="hint_totbpjs">Jumlah Yang Harus Dibayarkan</string>
    <string name="tot_bpjs">Total</string>
    <string name="input_bpjs">Masukkan No. BPJS Anda</string>
    <string name="pay">Bayar</string>
    <string name="mutasi">Mutasi Rekening</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="headername">Nama</string>
    <string name="bpjsuser">Atas Nama</string>
    <string name="cektagihan">Cek Tagihan</string>
    <string name="notesbpjs">Jumlah Total Yang Harus Anda Bayarkan dan Atas Nama Kartu BPJS Akan Otomatis Terisi Bila Anda Mengisi No.BPJS dengan benar Dan Menekan Tombol Cek Tagihan </string>

</resources>